{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 19,
  "lineage": "15cd8457-142c-086e-4fec-4900a6df0412",
  "resources": [
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:route-table/rtb-06e4db171d6c0670b",
            "id": "rtb-06e4db171d6c0670b",
            "owner_id": "755233231675",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "remote-state-private",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "remote-state-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state-private",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "remote-state-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0102e3f2eeaafa537",
            "route_table_id": "rtb-06e4db171d6c0670b",
            "subnet_id": "subnet-0b39f8349d452f2ed"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5444b58f1b053c",
            "route_table_id": "rtb-06e4db171d6c0670b",
            "subnet_id": "subnet-09b2b03725837be11"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b23992825a7dd267",
            "id": "r-rtb-079f91d1aa65856ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079f91d1aa65856ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:route-table/rtb-079f91d1aa65856ec",
            "id": "rtb-079f91d1aa65856ec",
            "owner_id": "755233231675",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "remote-state-public",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "remote-state-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state-public",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "remote-state-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092fd260e7f6ebca7",
            "route_table_id": "rtb-079f91d1aa65856ec",
            "subnet_id": "subnet-0158add01c7e5ac01"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075dd8f3d39dbf43f",
            "route_table_id": "rtb-079f91d1aa65856ec",
            "subnet_id": "subnet-0ea9a6a5e7af6c36f"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "remote-state-private-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-0b39f8349d452f2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b39f8349d452f2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remote-state-private-001/az1",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state-private-001/az1",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "remote-state-private-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-09b2b03725837be11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b2b03725837be11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remote-state-private-002/az2",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state-private-002/az2",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "remote-state-public-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-0158add01c7e5ac01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0158add01c7e5ac01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remote-state-public-001/az1",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state-public-001/az1",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "remote-state-public-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-0ea9a6a5e7af6c36f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9a6a5e7af6c36f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remote-state-public-002/az2",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state-public-002/az2",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "remote-state-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:internet-gateway/igw-0b23992825a7dd267",
            "id": "igw-0b23992825a7dd267",
            "owner_id": "755233231675",
            "tags": {
              "Name": "remote-state",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "remote-state",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "remote-state",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-0655298253cf3597d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:vpc/vpc-0655298253cf3597d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d1bf45f9bbd7ddc",
            "default_route_table_id": "rtb-03f7f52dc6ff1512b",
            "default_security_group_id": "sg-059beea46e6a58d62",
            "dhcp_options_id": "dopt-01dd2f68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0655298253cf3597d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f7f52dc6ff1512b",
            "owner_id": "755233231675",
            "tags": {
              "Name": "remote-state",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "remote-state",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "remote-state",
              "Owner": "sieon2",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "remote-state",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            }
          }
        }
      ]
    }
  ]
}